youfull/objects/Leader_Title__c.object
<CustomObject>
    <fields>
        <fullName>EXEC_IND__c</fullName>
        <description>Executive Indicator. &apos;Y&apos; means executive</description>
        <inlineHelpText>Executive Indicator. &apos;Y&apos; means executive</inlineHelpText>
        <label>Executive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_ERNGS_PCT__c</fullName>
        <label>Gen 1 % Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GENRTN_1_MIN_ORD_AMT__c</fullName>
        <label>Gen 1 Minimum Order Amount</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_ERNGS_PCT__c</fullName>
        <label>Gen 2 % Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GENRTN_2_MIN_ORD_AMT__c</fullName>
        <label>Gen 2 Minimum Order Amount</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_ERNGS_PCT__c</fullName>
        <label>Gen 3 % Earnings</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GENRTN_3_MIN_ORD_AMT__c</fullName>
        <label>Gen 3 Minimum Order Amount</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GRAPHIC_ERNG_IMG__c</fullName>
        <label>Earning Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LANG_CD__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>hu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es_MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>et</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LCL_LDRSHP_TITL_CD__c</fullName>
        <label>Title Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</fullName>
        <label>Title Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_KEY_TO_CMPR__c</fullName>
        <description>Leader title to Compare the current record title. This could be same title for Title Achievement, or could be Next Level up for Title Advancment</description>
        <label>Title to Compare</label>
        <referenceTo>Leader_Title__c</referenceTo>
        <relationshipLabel>Leader Titles</relationshipLabel>
        <relationshipName>Leader_Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR_NUMBER__c</fullName>
        <formula>VALUE( TEXT(LDRSHP_TITL_LVL_NR__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leader Title Level Num 2 Num</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_LVL_NR__c</fullName>
        <label>Title Level Number</label>
        <picklist>
            <picklistValues>
                <fullName>UQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_TYPE_DESC__c</fullName>
        <label>Title Type Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_TITL_TYPE_NR__c</fullName>
        <label>Title Type Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAX_PAST_DUE_PCT__c</fullName>
        <description>Maximum Percentage of Amount Due  by Sales Leader&apos;s Downline that the Sales Leader can reasch to achieve title</description>
        <label>Maximum Past Due Percent</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MAX_PAST_DUE_REP_CNT__c</fullName>
        <description>Maximum number of Representatives with Past Due Amount greater than zero allowed in my downline to achieve title.</description>
        <label>Max Past Due Representative Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_10_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 10 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_11_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 11 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_12_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 12 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_BLCKD_SLS_REQD_AMT__c</fullName>
        <label>Minimum Blocked Group Sales Required</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_EST_ERNGs_AMT__c</fullName>
        <label>Estimated Earning</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_FRST_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 1 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_GENRTN_1_LDR_CNT_TXT__c</fullName>
        <label>G1 Title Leader Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIN_GEN_1_SLS_REQD_AMT__c</fullName>
        <description>Minimum Generation 1 Sales Required for Sales Leader to make her title.</description>
        <label>Minimum Gen 1 Sales Required</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIN_GRP_ACTV_REP_CNT__c</fullName>
        <description>Minimum number of Actives representatives required in the 3 generations to make the title.</description>
        <label>G1 to G3 Active Reps Required</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_GRP_SLS_REQD_AMT__c</fullName>
        <label>Minimum Group Sales Required</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIN_PRSNL_SLS_REQD_AMT__c</fullName>
        <label>Minimum Personal Volume Required</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIN_REP_RCRTMNTS_REQD_NR__c</fullName>
        <label>Gen 1 Minimum Active Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_SCN_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 2 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIN_THRD_LVL_TITL_REQD_NR__c</fullName>
        <label>Title 3 Required Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</fullName>
        <externalId>true</externalId>
        <label>Leader Title Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>Market Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_QLFR_1_NR__c</fullName>
        <label>MRKT_TAG_QLFR_1_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_QLFR_2_NR__c</fullName>
        <label>MRKT_TAG_QLFR_2_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_QLFR_3_NR__c</fullName>
        <label>MRKT_TAG_QLFR_3_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leader Titles</relationshipLabel>
        <relationshipName>Leader_Titles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REQD_GENRTN_1_LDR_CNT_TXT__c</fullName>
        <label>G1 Sales Leaders Required</label>
        <type>TextArea</type>
    </fields>
    <label>Leader Title</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>MIN_GRP_SLS_REQD_AMT__c</columns>
        <columns>MIN_FRST_LVL_TITL_REQD_NR__c</columns>
        <columns>MIN_SCN_LVL_TITL_REQD_NR__c</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>MIN_PRSNL_SLS_REQD_AMT__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Argentina</fullName>
        <columns>Market__c</columns>
        <columns>NAME</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>MIN_PRSNL_SLS_REQD_AMT__c</columns>
        <columns>MIN_REP_RCRTMNTS_REQD_NR__c</columns>
        <columns>MIN_GEN_1_SLS_REQD_AMT__c</columns>
        <columns>MIN_GRP_ACTV_REP_CNT__c</columns>
        <columns>MIN_GRP_SLS_REQD_AMT__c</columns>
        <columns>LDRSHP_TITL_KEY_TO_CMPR__c</columns>
        <columns>MAX_PAST_DUE_PCT__c</columns>
        <columns>MAX_PAST_DUE_REP_CNT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <label>Argentina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_55</fullName>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>MIN_PRSNL_SLS_REQD_AMT__c</columns>
        <columns>MIN_GRP_SLS_REQD_AMT__c</columns>
        <columns>MIN_REP_RCRTMNTS_REQD_NR__c</columns>
        <columns>MIN_FRST_LVL_TITL_REQD_NR__c</columns>
        <columns>MIN_SCN_LVL_TITL_REQD_NR__c</columns>
        <columns>MIN_THRD_LVL_TITL_REQD_NR__c</columns>
        <columns>MIN_4_LVL_TITL_REQD_NR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>55</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>es_MX</value>
        </filters>
        <label>Market_55_esMX</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_55_enUS</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>55</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>es_MX</value>
        </filters>
        <label>Market_55_enUS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_62</fullName>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>MIN_GRP_SLS_REQD_AMT__c</columns>
        <columns>MIN_BLCKD_SLS_REQD_AMT__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>MIN_PRSNL_SLS_REQD_AMT__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>62</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>en_PH</value>
        </filters>
        <label>Market_62en_PH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_62_enUS</fullName>
        <columns>NAME</columns>
        <columns>LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>62</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Market_62_enUS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_73_enGB</fullName>
        <columns>NAME</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</columns>
        <columns>MIN_REP_RCRTMNTS_REQD_NR__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>73</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>en_GB</value>
        </filters>
        <label>Market_73_enGB</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_73_enUS</fullName>
        <columns>NAME</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LANG_CD__c</columns>
        <columns>MIN_REP_RCRTMNTS_REQD_NR__c</columns>
        <columns>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</columns>
        <columns>Market__c</columns>
        <columns>MRKT_ID__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>73</value>
        </filters>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>United Kingdom</value>
        </filters>
        <filters>
            <field>LANG_CD__c</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Market_73_enUS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pol</fullName>
        <columns>MRKT_ID_LDRSHP_TITL_CD_LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>LANG_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Polska</value>
        </filters>
        <label>Pol</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>market_999</fullName>
        <columns>NAME</columns>
        <columns>LANG_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_CD__c</columns>
        <columns>LCL_LDRSHP_TITL_LANG_DESC_TXT__c</columns>
        <columns>MIN_EST_ERNGs_AMT__c</columns>
        <columns>LDRSHP_TITL_LVL_NR__c</columns>
        <columns>EXEC_IND__c</columns>
        <columns>GRAPHIC_ERNG_IMG__c</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MRKT_ID__c</field>
            <operation>equals</operation>
            <value>999</value>
        </filters>
        <label>market_999</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LDT-{000000}</displayFormat>
        <label>Leader Title Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leader Titles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>